Bug 218512 - "Contents" link in wikipedia view don't work correctly
Summary: "Contents" link in wikipedia view don't work correctly
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Wikipedia (other bugs)
Version First Reported In: 2.3-GIT
Platform: unspecified Linux
: NOR normal
Target Milestone: 2.4.0
Assignee: Amarok Bugs
URL:
Keywords:
: 225986 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-13 14:08 UTC by Piotr Mitas
Modified: 2010-12-08 13:05 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mitas 2009-12-13 14:08:09 UTC
Version:           2.2.1 (using 4.3.4 (KDE 4.3.4), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.32-gentoo

Instead of taking me to the relevant section of the article, they open a konqueror window on the "welcome screen". It might be worth noting that konqueror is my default file manager, but not web browser.
Comment 1 Piotr Mitas 2009-12-13 14:15:51 UTC
I also found that it's started with a command like this:
kdeinit4: konqueror [kdeinit] -mimetype text/html about:blank#Musical_style
Comment 2 Myriam Schweingruber 2009-12-13 15:41:08 UTC
I can't reproduce this for Wikipedia links, those work perfectly well in the wikipedia applet.
But external links are indeed launching Konqueror by default, seems to be hardcoded. The links themselves are not opened at all.
Comment 3 Myriam Schweingruber 2009-12-13 15:41:45 UTC
Forgot to increment the version, using Amarok 2.2.-git
Comment 4 Piotr Mitas 2009-12-13 15:54:23 UTC
On my system external links (to non-wikipedia sites) open correctly in firefox.
Links to other wikipedia articles also open correctly in the applet.
Only jumping to other sections of the same article doesn't work. (I noticed it's also true for footnotes).
Comment 5 Myriam Schweingruber 2009-12-13 19:14:23 UTC
Well, part of what you describe is solved in Amarok 2.2-git, the Wikipedia links are opened in the Wikipedia applet, but external links (and footnotes are external links most of the time) not.
Comment 6 Piotr Mitas 2009-12-13 19:25:25 UTC
Sorry, by 'footnotes' I meant the clickable numbers in the article that move the page down to the actual footnote.
Comment 7 Myriam Schweingruber 2009-12-13 21:15:55 UTC
Yes, it tries to open in Konqueror but actually only opens a Konqueror window.
Comment 8 Cyril Brosch 2010-02-01 09:50:37 UTC
Weird. When I click on a wikipedia link in the applet (eg. "Leipzig"), Konqueror (which is neither my default file manager nor my default browser) pops up trying to show file:///wiki/Leipzig. But it works, when I do right click > Open link!
External links open in my default browser (no problem).

(Amarok 2.2.2 in KDE 4.3.5, Mandriva 2010.0)
Comment 9 jajaX 2010-02-01 16:32:40 UTC
Hi !

(In reply to comment #8)
> Weird. When I click on a wikipedia link in the applet (eg. "Leipzig"),
> Konqueror (which is neither my default file manager nor my default browser)
> pops up trying to show file:///wiki/Leipzig. But it works, when I do right
> click > Open link!
> External links open in my default browser (no problem).
> 
> (Amarok 2.2.2 in KDE 4.3.5, Mandriva 2010.0)

same problem as that !

same problem or new bug report needed ? (I don't find other bug report about that)
Comment 10 Myriam Schweingruber 2010-02-09 14:03:53 UTC
*** Bug 225986 has been marked as a duplicate of this bug. ***
Comment 11 capi /. etheriel 2010-02-13 15:53:51 UTC
when clicking on an internal wikipedia link in the applet, I get the message
"could not execute command. File or folder "file:///wiki/Pianist" does not
exist"

external links from the applet open konqueror and work correctly.

running amarok 2.2.2 on anrchlinux.
Comment 12 Simon ESNEAULT 2010-04-14 14:56:35 UTC
There are different pbs here :

- clickable numbers and section direct access is broken b/c the # character is not correctly handled, I'll have a look on that.

- the "file:///wiki/Pianist" pb should be solved in git head now, it was a regression

- External link opend with konky is not hardcoded, check your system setting default browser, and default file association, aka clicking on any *.html local file from Dolphin should open the desired web browser 


-Simon
Comment 13 Simon ESNEAULT 2010-04-14 16:51:19 UTC
Arf, the '#' thing is just no fun. The page is fetched and loaded correctly, but the page just doesn't scroll to the position of the link, as we parse manually html in order to remove some unwanted data, and then pass the fake page to a Plasma web view which can't handle #blabla stuff. So we need to implement manually the "jump" function intended for a fragment part URL like http://en.wikipedia.org/wiki/My_Bloody_Valentine#citation3

I'm to lazy for that, and don't see a simple solution. Anyone else ? 
-Simon
Comment 14 Myriam Schweingruber 2010-05-22 12:27:32 UTC
Changing target.
Comment 15 Samuel Brack 2010-12-07 23:10:46 UTC
Fixed in 2.4-GIT:

- clickable numbers lead directly to the correct footnote
- links to other wikipedia pages lead to them in amarok's wikipedia applet
- external links open with the configured browser (firefox in my case) not with Konqueror

Can be closed, I think
Comment 16 Myriam Schweingruber 2010-12-08 13:05:46 UTC
Closing as fixed, thanks for testing. Please all, check outh the latest Amarok 2.4 beta, released 2 days ago.