fix relative links from wikipedia pages

browsing to a different wikipedia language and clicking links there would not work as the
relative links would have been transformed to the configured wikipedia language. this is fixed
by communicating the url of the current page to Plasma::Webview's QWebPage instead of monkeying
around with relative links

BUG:218512